# mistify

./: .dockerignore  .env.example  .gitignore  BUILD_OPTIMIZATION.md  CLUSTERING.md  DOCKER_BUILD.md  Dockerfile  Dockerfile.base  Dockerfile.models  INTEGRATION_SUMMARY.md  METRICS.md  README.md  clustering_examples.py  docker-compose.yml  download_models.py  pyproject.toml  quick_test.py  requirements.txt  restart.sh  server.py  setup.sh  test_clustering.py  test_clustering.sh  test_translation.py  verify_models.py
.github/workflows/: build-base.yml  deploy.yml
infrastructure/: cdk.json  package-lock.json  package.json
infrastructure/lib/: index.ts
proto/mistify/: operations.proto
scripts/: diagnose_clustering.py  diagnose_distilbart.py  diagnose_distilbart_binary.py  diagnose_distilbart_editorial.py
src/: __init__.py  metrics.py  models.py  server.py
src/endpoints/: __init__.py  analysis.py  classification.py  clustering.py  embedding.py  generation.py  language.py  translation.py
src/grpc/: __init__.py  mistify_operations_pb2.py  mistify_operations_pb2_grpc.py  server.py
src/grpc/mistify/: operations_pb2.py  operations_pb2_grpc.py
src/helpers/: async_wrappers.py  clustering.py  models.py
src/operations/: __init__.py  models.py  queue.py  worker.py
tests/: conftest.py  test_clustering_prefilter.py  test_editorial_scoring.py
