[project]
name = "mistify"
version = "1.3.0"
description = "Unified AI helpers for language detection, classification, translation, embeddings, clustering, and generation."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "accelerate>=0.20.0",
    "fastapi==0.104.1",
    "fasttext-wheel==0.9.2",
    "grpcio>=1.60.0",
    "httpx>=0.27.0",
    "networkx>=3.0",
    "numpy==1.26.4",
    "prometheus-client==0.20.0",
    "protobuf>=3.20.0",
    "psutil==5.9.6",
    "pydantic==2.5.0",
    "python-dotenv>=1.0.0",
    "redis>=5.0.0",
    "sacremoses>=0.0.43",
    "scikit-learn>=1.3.0",
    "sentence-transformers>=2.2.2",
    "sentencepiece==0.1.99",
    "spacy>=3.4.0",
    "tqdm>=4.64.0",
    "torch==2.3.0",
    "transformers==4.41.2",
    "uvicorn[standard]==0.24.0",
]

[tool.uv]
package = false
